Closed Bug 1793609 Opened 3 years ago Closed 3 years ago

On Linux resizing a new window can briefly revert the new size.

Categories

(Core :: Layout, defect, P3)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox107 --- fixed

People

(Reporter: matc.pub, Assigned: matc.pub)

Details

Attachments

(1 file)

Steps to reproduce:

Resizing a newly opened window and looking at the resize events.

Actual results:

There is a small chance that the resize can start after the window is made visible but before the window becomes visible. In that case the resize changes the window size immediately, but the first size-allocate signal does not account for the resize and reverts the size until a second size-allocate signal occurs.

Expected results:

A resize started after a window is made visible should not immediately change the window size.

The first size-allocate is likely (or guaranteed) to be of the size at
the time of the first NativeShow(true) call. Any resize between show and
the first size-allocate will be accounted for in a second size-allocate
signal. If we update and dispatch the window size at the beginning of
such a resize, we end up reverting back to previous size from the first
size-allocate signal before dispatching the size for the resize again
from the second size-allocate signal.

Assignee: nobody → matc.pub
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

The Bugbug bot thinks this bug should belong to the 'Core::Layout' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Layout
Product: Firefox → Core
Severity: -- → S3
OS: Unspecified → Linux
Priority: -- → P3
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/75c1403f58f7 [Linux] Wait for OnSizeAllocate while the window becomes visible before updating window size. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: